[add] Index page goods, new, best, sale

--- a/files/icomoon.css
+++ b/files/icomoon.css
@@ -40,7 +40,7 @@
 .icon-arrow_up:before {
   content: "\e904";
 }
-.icon-bell:before {
+.icon-notify:before {
   content: "\e905";
 }
 .icon-cart:before {
