--- a/files/main.css
+++ b/files/main.css
@@ -118,13 +118,14 @@ textarea.error:-ms-input-placeholder {color: red;}
 .button, button, [class^="button-"], .paymentFormSubmitLink, .paymentFormTbodySubmitButton {color: #ffffff;background: linear-gradient(180deg, #FFB6DF 0%, #FF72C2 100%);border-radius: 30px;padding: 0 40px;line-height: 50px;border: 0;text-align: center;font-size: 1rem;font-family: 'Comfortaa', cursive;cursor: pointer;display: inline-block;position: relative;transition: all 0.3s ease;}
 .button:hover, button:hover, [class^="button-"]:hover, .paymentFormSubmitLink:hover, .paymentFormTbodySubmitButton:hover, .button.active, .button.opened, [class^="button-"].active, [class^="button-"].opened {color: #ffffff;background: linear-gradient(180deg, #DECFFF 0%, #9579D1 100%);}
 
-.button5 {background-color: transparent;padding: 0;line-height: 1;}
-.button5:hover {color: #FFA5D8;background-color: transparent;}
+
+.button5 {font-weight: 600;}
+.button5 i {font-size: 1.25rem;line-height: 1;margin-right: .5rem;transition: all 0.3s ease;vertical-align: middle;display: inline-block;}
+.button5 span {vertical-align: middle;display: inline-block;}
+.button5.active i, .button5:hover i {transform: rotate(90deg);}
+.button5.active:hover i {transform: rotate(0deg);}
 .button.empty {color: #656d72;background-color: #eef2f5;}
 .button.empty:hover {color: #656d72;background-color: #eef2f5;}
-.button i {vertical-align: middle;}
-.button span + i {margin-left: .5rem;}
-.button i + span {margin-left: .5rem;}
 .small {line-height: 2rem;padding: 0 1rem;font-size: .875rem;}
 .remove i, .fancybox-close-small i {transition: all 0.3s ease;display: inline-block;}
 .remove:hover i, .fancybox-close-small:hover i {transform: rotate(90deg);}
@@ -136,20 +137,21 @@ textarea.error:-ms-input-placeholder {color: red;}
 /**************************************/
 /*** Избранное, Сравнение, В коризну, Уведомить, Нет в наличии ***/
 [class^="add-"]:after {font-family: 'icomoon';line-height: 1;}
-.add-favorites:after {content: '\e90d';}
-.add-compare:after {content: '\e90b';}
+.add-favorites:after {content: '\e921';}
+.add-compare:after {content: '\e90c';}
 
 /*** Иконки Новинка, Хит, Скидка ***/
-.product__ico {color: #ffffff;z-index: 2;border-top: 1px solid #ffffff;position: absolute;top: 0;left: 0;width: 100%;}
+.product__ico {color: #ffffff;z-index: 2;position: absolute;top: 6px;left: 6px;}
 .product__ico label {display: none;}
-.product__ico span {font-size: .75rem;padding: .25rem .5rem;line-height: 1;flex-grow: 1;text-align: center;}
-.ico__sales {background: #CFA191;}
-.ico__sale {background: #CFA191;}
-.ico__sale:before {content: 'Скидка';}
-.ico__best {background: #FFA5D8;}
-.ico__best:before {content: 'Хит';}
-.ico__new {background: #70787D}
-.ico__new:before {content: 'Новинка';}
+.product__ico span {font-size: .75rem;line-height: 1;width: 36px;height: 36px;line-height: 36px;text-align: center;border-radius: 100%;display: block;}
+.product__ico span + span {margin-top: -10px;}
+.ico__sales {background: #FFA5D8;}
+.ico__sale {background: #DE4F8B;}
+.ico__sale:before {content: 'sale';}
+.ico__best {background: #9579D1;}
+.ico__best:before {content: 'hit';}
+.ico__new {background: #79D19C;}
+.ico__new:before {content: 'new';}
 
 
 /**************************************/
@@ -170,8 +172,8 @@ textarea.error:-ms-input-placeholder {color: red;}
 /**************************************/
 /*** Цены ***/
 /**************************************/
-.price__old {text-decoration: line-through;font-family: 'Cormorant Infant', serif;}
-.price__now {font-size: 1.125rem;font-weight: bold;font-family: 'Cormorant Infant', serif;}
+.price__old {text-decoration: line-through;color: #CBC3DB;}
+.price__now {font-size: 1.25rem;font-weight: bold;}
 .num + span {display: none;}
 .num:after {content: "₽";line-height: 1;margin-left: 0.25rem;}
 
@@ -204,11 +206,9 @@ h6 {font-size: 0.875rem;}
 /*** Блок Заголовков ***/
 /**************************************/
 .block__title {margin-bottom: 2rem;text-align: center;position: relative;}
-.block__title .title_separator {display: flex;align-items: center;justify-content: center;}
-.block__title .title_separator:before, .block__title .title_separator:after {content: '';width: 2rem;height: 1px;background-color: #3B2865;display: inline-block;}
-.block__title .title_separator span {margin: 0 1rem;}
-.block__title .subtitle {font-size: 80%;}
-.block__title .pretitle {width: 44px;height: 44px;background-size: cover;margin: .5rem auto 0;}
+.block__title .title {font-size: 2.5rem;line-height: 1.2;font-weight: bold;}
+.block__title .subtitle {font-size: 2rem;font-weight: 600;color: #7EB8DA;margin-top: .5rem;font-family: 'Cormorant Infant', serif;}
+.block__title .pretitle {width: 44px;height: 44px;background-size: cover;margin: 0 auto;}
 /* Блок Заголовков. Адаптивность */
 @media (max-width: 991.98px) {
 	.block__title {margin-bottom: 1rem;}
@@ -601,7 +601,6 @@ h6 {font-size: 0.875rem;}
 /**************************************/
 /*** Меню ***/
 /**************************************/
-#menu {margin-top: 1.5rem;}
 .menu__inner {position: relative;}
 
 /** Меню. Каталог **/
@@ -687,7 +686,7 @@ h6 {font-size: 0.875rem;}
 /**************************************/
 .promo__item {padding: 1.5rem 2.5rem 2rem 2.5rem;background-color: #ffffff;border-radius: 1.5rem;background-repeat: no-repeat;background-size: cover;}
 .promo__icon {font-size: 1rem;color: #ffffff;background: linear-gradient(180deg, #DECFFF 0%, #9579D1 100%);width: 100px;height: 100px;border-radius: 100%;text-align: center;flex-direction: column;}
-.promo__price {font-size: 2rem;}
+.promo__price {font-size: 2rem;font-family: 'Cormorant Infant', serif;}
 .promo__title {font-size: 2.5rem;font-weight: bold;}
 .promo__subtitle {font-size: 1rem;margin-top: .5rem;}
 .promo__content {padding: 0 1.25rem;}
@@ -700,7 +699,6 @@ h6 {font-size: 0.875rem;}
 /**************************************/
 .body__inner {color: #ffffff;background: #BE9DDF;border-radius: 20px;padding: 40px;overflow: hidden;position: relative;}
 .body__inner .body {position: relative;text-align: center;}
-.body__inner .block__title .title {font-size: 2.5rem;font-weight: bold;}
 .flower-small {width: 60px;height: 60px;position: absolute;top: -1rem;right: -1rem;background-size: cover;}
 .flower-big {width: 130px;height: 130px;position: absolute;bottom: -1.5rem;left: -1.5rem;background-size: cover;}
 
@@ -713,14 +711,14 @@ h6 {font-size: 0.875rem;}
 .callback__title {font-size: 30px;font-weight: 600;}
 .callback__subtitle {font-size: 1rem;}
 .callback__icon {left: 3rem;bottom: 5.5rem;font-size: 1rem;color: #ffffff;background: linear-gradient(180deg, #DECFFF 0%, #9579D1 100%);width: 90px;height: 90px;border-radius: 100%;text-align: center;flex-direction: column;position: absolute;z-index: 2;}
-.callback__price {font-size: 26px;}
+.callback__price {font-size: 26px;font-family: 'Cormorant Infant', serif;}
 .callback__content {border-top: 20px solid rgba(237, 184, 225, 0.4);padding: 2rem 1.25rem 1.25rem 1.25rem;border-radius: 0 0 1.5rem 1.5rem;background-repeat: no-repeat;background-size: cover;width: 100%;position: relative;}
 .callback__item:last-child {justify-content: flex-start;}
 .callback__item:last-child .callback__content {border-top: 0;border-bottom: 20px solid rgba(237, 184, 225, 0.4);padding: 1.25rem 1.25rem 2rem 1.25rem;border-radius: 1.5rem 1.5rem 0 0;}
 .callback__item:last-child .callback__icon {bottom: auto;top: 5.5rem}
-.callback__title.title {font-size: 2.5rem;font-weight: bold;}
-.callback__subtitle.subtitle {font-size: 1rem;margin-top: 1rem;}
-.callback__item-callback {padding: 1.25rem;height: 470px;}
+.callback__item-callback {padding: 1.25rem;height: 460px;}
+.callback__item-callback .pretitle {margin: .5rem auto 0;}
+.callback__item-callback .callback__subtitle {font-size: 1rem;margin-top: 1rem;}
 .callback__item-callback .form__button {width: 100%;}
 .callback__item-callback .form__fields input {padding-left: 54px;}
 .callback__item-callback .form__fields i {width: 36px;height: 36px;line-height: 36px;font-size: 18px;color: #ffffff;background-color: #E3DDEE;border-radius: 100%;display: inline-block;text-align: center;position: absolute;top: 7px;left: 7px;}
@@ -766,15 +764,57 @@ h6 {font-size: 0.875rem;}
 
 
 
+/**************************************/
+/*** Товары таблицей ***/
+/**************************************/
+.products__grid {display: grid;gap: 20px;grid-template-columns : repeat(4, 1fr);}
+.product__item {background-color: #ffffff;border: 4px solid #E3DDEE;border-radius: 1.25rem;position: relative;transition: all 0.3s ease;}
+.product__item:hover {border-color: #ffffff;}
+.product__image {position: relative;overflow: hidden;}
+.product__image:after {content: '';width: calc(100% + 20px);height: 7rem;bottom: -4.5rem;left: -10px;background-color: #ffffff;border: 4px solid #E3DDEE;border-radius: 100%;display: block;position: absolute;overflow: visible;transition: all 0.3s ease;}
+.product__item:hover .product__image:after {border-color: #ffffff;}
+.product__img {height: 262px;}
+.product__img img {border-radius: 1rem 1rem 0 0;}
+.product__shop {text-align: center;padding-bottom: .5rem;position: relative;}
+.product__name {font-size: 1rem;height: 60px;margin: .25rem 0;}
+.product__name span {max-height: 60px;display: block;overflow: hidden;}
+.has-oldPrice .price__now {color: #9579D1;}
+.quickview {opacity: 0;top: 6px;right: -6px;width: 40px;height: 40px;line-height: 40px;font-size: 20px;color: #FFA5D8;background-color: #ffffff;border: 2px solid #FFA5D8;box-shadow: 0px 4px 10px rgba(174, 143, 237, 0.3);border-radius: 100%;display: block;text-align: center;position: absolute;transition: all 0.3s ease;}
+.quickview:hover {color: #ffffff;background-color: #FFA5D8;border-color: #ffffff;}
+.product__item:hover .quickview {opacity: 1;right: 6px;}
+/* Наличие */
+.product__available {font-size: .75rem;}
+.product__available.empty {color: #DE4F8B;}
+.product__available.alot {color: #9579D1;}
+.product__available.few {color: #7EB8DA;}
+/* Кнопки Избр и Сравнения */
+.product__links {margin: -3.5rem 0 .5rem;justify-content: center;align-items: flex-end;position: relative;z-index: 2;}
+.product__links a {opacity: 0;margin: 0 5px;width: 40px;height: 40px;line-height: 40px;font-size: 18px;color: #FFA5D8;border: 2px solid #FFA5D8;background-color: #ffffff;box-shadow: 0px 4px 10px rgba(174, 143, 237, 0.3);border-radius: 100%;display: block;text-align: center;transition: all 0.3s ease;position: relative;}
+.product__links a:hover {color: #ffffff;border-color: #ffffff;}
+.product__links a.add-compare {transform: translateX(100%);}
+.product__links a.add-favorites {transform: translateX(-100%);}
+.product__item:hover .product__links a {opacity: 1;transform: translateX(0);}
+/* Добавление в корзину */
+.product__addCart a {opacity: 1;width: 54px;height: 54px;line-height: 54px;font-size: 24px;color: #ffffff;border: 4px solid #FFFFFF;background: linear-gradient(180deg, #FFB6DF 0%, #FF72C2 100%);box-shadow: 0px 4px 10px rgba(174, 143, 237, 0.3);border-radius: 100%;display: block;text-align: center;}
+.product__addCart a:hover {box-shadow: 0px 4px 10px rgba(174, 143, 237, 0.3);}
+.product__addCart a.add-notify {background: #CBC3DB;}
+.product__addCart a span {display: none;}
+/* Анимация для кнопок */
+.product__links a:before {content: "";background: linear-gradient(180deg, #FFB6DF 0%, #FF72C2 100%);position: absolute;z-index: -1;top: 0;left: 0;right: 0;bottom: 0;overflow: hidden;-webkit-transform: scaleX(0);-moz-transform: scaleX(0);-o-transform: scaleX(0);-ms-transform: scaleX(0);transform: scaleX(0);-webkit-transform-origin: 0 50%;transform-origin: 0 50%;-webkit-transition-property: transform;transition-property: transform;-webkit-transition-duration: 0.3s;transition-duration: 0.3s;-webkit-transition-timing-function: ease-out;transition-timing-function: ease-out;border-radius: 100%;-moz-border-radius: 100%;-webkit-border-radius: 100%;-khtml-border-radius: 100%;}
+.product__links a:hover:before {-webkit-transform: scale(1);-moz-transform: scale(1);-o-transform: scale(1);-ms-transform: scale(1);transform: scaleX(1);}
+.product__addCart a:hover:before {background: linear-gradient(180deg, #DECFFF 0%, #9579D1 100%);}
+
+.product__item:after {content: '';width: calc(100% - 20px);height: 0;background-color: #7EB8DA;border-radius: 5px;position: absolute;bottom: -3px;left: 10px;transition: all 0.3s ease;}
+.product__item:hover:after {height: 3px;}
 
 
 
-
-
-
-
-
-
+/*** Товары на главной ***/
+[id^="pdt__"] .products__buttons {margin-top: 2rem;text-align: center;}
+[id^="pdt__"] .product__item:nth-child(n+9) {display: none;}
+[id^="pdt__"] .product__item.show {display: block !important;}
+#pdt__sale .product__item {display: block;}
+#pdt__sale .product__item:nth-child(n+13) {display: none;}
 
 
 
