--- a/files/main.css
+++ b/files/main.css
@@ -193,7 +193,7 @@ textarea.error:-ms-input-placeholder {color: red;}
 /**************************************/
 /*** Заголовки ***/
 /**************************************/
-h1, h2, h3, h4, h5, h6 {text-rendering: optimizelegibility;text-transform: none;line-height: 1.5;margin: 0;padding: 0;font-weight: normal;font-family: 'Cormorant Infant', serif;}
+h1, h2, h3, h4, h5, h6 {text-rendering: optimizelegibility;text-transform: none;line-height: 1.5;margin: 0;padding: 0;font-weight: 600;font-family: 'Cormorant Infant', serif;}
 h1 {font-size: 2rem;}
 h2 {font-size: 1.75rem;}
 h3 {font-size: 1.5rem;}
@@ -238,11 +238,11 @@ h6 {font-size: 0.875rem;}
 	#breadcrumbs {width: 100%;}
 }
 
-/* #page__title .block__title {margin: 0;} */
 
 /**************************************/
 /*** Предзагрузчик ***/
 /**************************************/
+.loading {overflow: hidden;}
 .preloader {position: absolute;top: 0;left: 0;width: 100%;height: 100%;background: #ffffff;z-index: 40;display: flex;align-items: center;justify-content: center;}
 .preloader .loading {display: inline-block;width: 5rem;height: 5rem;}
 .preloader .loading:after {content: '';display: block;width: 5rem;height: 5rem;margin: 1px;border-radius: 50%;border: 5px solid #ffffff;border-color: #FFA5D8 transparent #FFA5D8 transparent;animation: loading 1.2s linear infinite;}
@@ -642,6 +642,7 @@ h6 {font-size: 0.875rem;}
 /**************************************/
 /*** Слайдшоу ***/
 /**************************************/
+#slideshow.loading {height: 580px;}
 .slideshow__inner {position: relative;}
 .slider__image {margin: 1.5rem;position: absolute;right: 0;top: 0;}
 .slider__image img {outline: 1.5rem solid rgba(126, 184, 218, 0.1);border: 1rem solid rgba(126, 184, 218, 0.2);border-radius: 100%;}
@@ -684,6 +685,7 @@ h6 {font-size: 0.875rem;}
 /**************************************/
 /*** Промо слайдер ***/
 /**************************************/
+#promo.loading {height: 156px;}
 .promo__item {padding: 1.5rem 2.5rem 2rem 2.5rem;background-color: #ffffff;border-radius: 1.5rem;background-repeat: no-repeat;background-size: cover;}
 .promo__icon {font-size: 1rem;color: #ffffff;background: linear-gradient(180deg, #DECFFF 0%, #9579D1 100%);width: 100px;height: 100px;border-radius: 100%;text-align: center;flex-direction: column;}
 .promo__price {font-size: 2rem;font-family: 'Cormorant Infant', serif;}
@@ -728,6 +730,7 @@ h6 {font-size: 0.875rem;}
 /**************************************/
 /*** Инстаграм ***/
 /**************************************/
+#instagram.loading {height: 274px;}
 .instagram__inner {position: relative;}
 .instagram__items {display: grid;gap: 20px;grid-template-columns: repeat(4, 1fr);}
 .instagram__item img {border-radius: 20px;}
@@ -742,13 +745,13 @@ h6 {font-size: 0.875rem;}
 /*** Подвал ***/
 /**************************************/
 .footer__menu {width: 100%;position: relative;margin: 1rem 0;padding: 0 80px;background-color: #ffffff;box-shadow: 0px 4px 10px rgba(174, 143, 237, 0.3);border-radius: 40px;}
-.footer__bottom {justify-content: space-between;margin: 1rem 0;}
+.footer__bottom {justify-content: space-around;margin: 1rem 0;}
 .footer__copyright {color: #CBC3DB;text-align: center;margin: 1rem 0;}
 /** Подвал. Контакты **/
-.footer__contacts {align-items: flex-end;margin: 0 0 2rem 0;}
+.footer__contacts {align-items: flex-start;margin: 0 0 2rem 0;}
 .contacts__block {width: 25%;text-align: center;}
-.contacts__block:first-child {margin-bottom: 60px;}
-.contacts__block:last-child {margin-bottom: 60px;}
+.contacts__block:nth-child(2) {margin-top: 80px;}
+.contacts__block:nth-child(3) {margin-top: 80px;}
 .contacts__block-icon {margin: 1rem;font-size: 36px;width: 70px;height: 70px;line-height: 76px;color: #ffffff;background: #7EB8DA;outline: 1rem solid rgba(126, 184, 218, 0.2);border-radius: 100%;text-align: center;}
 .contacts__block-content {margin-top: 1rem;font-size: 1rem;width: 100%;}
 .contacts__block-phone {display: block;margin-bottom: .5rem;}
@@ -767,18 +770,23 @@ h6 {font-size: 0.875rem;}
 /**************************************/
 /*** Товары таблицей ***/
 /**************************************/
-.products__grid {display: grid;gap: 20px;grid-template-columns : repeat(4, 1fr);}
-.product__item {background-color: #ffffff;border: 4px solid #E3DDEE;border-radius: 1.25rem;position: relative;transition: all 0.3s ease;}
-.product__item:hover {border-color: #ffffff;}
+.product__item {background-color: #ffffff;position: relative;transition: all 0.3s ease;}
 .product__image {position: relative;overflow: hidden;}
-.product__image:after {content: '';width: calc(100% + 20px);height: 7rem;bottom: -4.5rem;left: -10px;background-color: #ffffff;border: 4px solid #E3DDEE;border-radius: 100%;display: block;position: absolute;overflow: visible;transition: all 0.3s ease;}
-.product__item:hover .product__image:after {border-color: #ffffff;}
-.product__img {height: 262px;}
+.product__img {height: 260px;}
 .product__img img {border-radius: 1rem 1rem 0 0;}
-.product__shop {text-align: center;padding-bottom: .5rem;position: relative;}
-.product__name {font-size: 1rem;height: 60px;margin: .25rem 0;}
+.product__shop {position: relative;}
+.product__name {font-size: 1rem;}
 .product__name span {max-height: 60px;display: block;overflow: hidden;}
-.has-oldPrice .price__now {color: #9579D1;}
+.products__grid {display: grid;gap: 20px;grid-template-columns : repeat(4, 1fr);}
+.products__grid .product__item {border: 4px solid #E3DDEE;border-radius: 1.25rem;}
+.products__grid .product__item:hover {border-color: #ffffff;}
+.products__grid .product__item:after {content: '';width: calc(100% - 20px);height: 0;background-color: #7EB8DA;border-radius: 5px;position: absolute;bottom: -3px;left: 10px;transition: all 0.3s ease;}
+.products__grid .product__item:hover:after {height: 3px;}
+.products__grid .product__image:after {content: '';width: calc(100% + 126px);height: 14rem;bottom: -11.75rem;left: -4rem;background-color: #ffffff;border: 4px solid #E3DDEE;border-radius: 100%;display: block;position: absolute;overflow: visible;transition: all 0.3s ease;}
+.products__grid .product__item:hover .product__image:after {border-color: #ffffff;}
+.products__grid .product__shop {text-align: center;padding-bottom: .5rem;}
+.products__grid .product__name {height: 60px;margin: .25rem 0;}
+.has-oldPrice .price__now {color: #9579D1;margin-right: 1rem;}
 .quickview {opacity: 0;top: 6px;right: -6px;width: 40px;height: 40px;line-height: 40px;font-size: 20px;color: #FFA5D8;background-color: #ffffff;border: 2px solid #FFA5D8;box-shadow: 0px 4px 10px rgba(174, 143, 237, 0.3);border-radius: 100%;display: block;text-align: center;position: absolute;transition: all 0.3s ease;}
 .quickview:hover {color: #ffffff;background-color: #FFA5D8;border-color: #ffffff;}
 .product__item:hover .quickview {opacity: 1;right: 6px;}
@@ -788,33 +796,109 @@ h6 {font-size: 0.875rem;}
 .product__available.alot {color: #9579D1;}
 .product__available.few {color: #7EB8DA;}
 /* Кнопки Избр и Сравнения */
-.product__links {margin: -3.5rem 0 .5rem;justify-content: center;align-items: flex-end;position: relative;z-index: 2;}
-.product__links a {opacity: 0;margin: 0 5px;width: 40px;height: 40px;line-height: 40px;font-size: 18px;color: #FFA5D8;border: 2px solid #FFA5D8;background-color: #ffffff;box-shadow: 0px 4px 10px rgba(174, 143, 237, 0.3);border-radius: 100%;display: block;text-align: center;transition: all 0.3s ease;position: relative;}
+.products__grid .product__links {margin: -3.5rem 0 .5rem;justify-content: center;align-items: flex-end;position: relative;z-index: 2;}
+.product__links a {margin: 0 5px;width: 40px;height: 40px;line-height: 40px;font-size: 18px;color: #FFA5D8;border: 2px solid #FFA5D8;background-color: #ffffff;box-shadow: 0px 4px 10px rgba(174, 143, 237, 0.3);border-radius: 100%;display: block;text-align: center;transition: all 0.3s ease;position: relative;}
 .product__links a:hover {color: #ffffff;border-color: #ffffff;}
-.product__links a.add-compare {transform: translateX(100%);}
-.product__links a.add-favorites {transform: translateX(-100%);}
+.products__grid .product__links a {opacity: 0;}
+.products__grid .product__links a.add-compare {transform: translateX(100%);}
+.products__grid .product__links a.add-favorites {transform: translateX(-100%);}
 .product__item:hover .product__links a {opacity: 1;transform: translateX(0);}
 /* Добавление в корзину */
-.product__addCart a {opacity: 1;width: 54px;height: 54px;line-height: 54px;font-size: 24px;color: #ffffff;border: 4px solid #FFFFFF;background: linear-gradient(180deg, #FFB6DF 0%, #FF72C2 100%);box-shadow: 0px 4px 10px rgba(174, 143, 237, 0.3);border-radius: 100%;display: block;text-align: center;}
-.product__addCart a:hover {box-shadow: 0px 4px 10px rgba(174, 143, 237, 0.3);}
-.product__addCart a.add-notify {background: #CBC3DB;}
-.product__addCart a span {display: none;}
+.products__grid .product__addCart a {opacity: 1;width: 54px;height: 54px;line-height: 54px;font-size: 24px;color: #ffffff;border: 4px solid #FFFFFF;background: linear-gradient(180deg, #FFB6DF 0%, #FF72C2 100%);box-shadow: 0px 4px 10px rgba(174, 143, 237, 0.3);border-radius: 100%;display: block;text-align: center;}
+.products__grid .product__addCart a:hover {box-shadow: 0px 4px 10px rgba(174, 143, 237, 0.3);}
+.products__grid .product__addCart a.add-notify {background: #CBC3DB;}
+.products__grid .product__addCart a span {display: none;}
 /* Анимация для кнопок */
 .product__links a:before {content: "";background: linear-gradient(180deg, #FFB6DF 0%, #FF72C2 100%);position: absolute;z-index: -1;top: 0;left: 0;right: 0;bottom: 0;overflow: hidden;-webkit-transform: scaleX(0);-moz-transform: scaleX(0);-o-transform: scaleX(0);-ms-transform: scaleX(0);transform: scaleX(0);-webkit-transform-origin: 0 50%;transform-origin: 0 50%;-webkit-transition-property: transform;transition-property: transform;-webkit-transition-duration: 0.3s;transition-duration: 0.3s;-webkit-transition-timing-function: ease-out;transition-timing-function: ease-out;border-radius: 100%;-moz-border-radius: 100%;-webkit-border-radius: 100%;-khtml-border-radius: 100%;}
 .product__links a:hover:before {-webkit-transform: scale(1);-moz-transform: scale(1);-o-transform: scale(1);-ms-transform: scale(1);transform: scaleX(1);}
 .product__addCart a:hover:before {background: linear-gradient(180deg, #DECFFF 0%, #9579D1 100%);}
 
-.product__item:after {content: '';width: calc(100% - 20px);height: 0;background-color: #7EB8DA;border-radius: 5px;position: absolute;bottom: -3px;left: 10px;transition: all 0.3s ease;}
-.product__item:hover:after {height: 3px;}
 
 
-
+/**************************************/
 /*** Товары на главной ***/
+/**************************************/
 [id^="pdt__"] .products__buttons {margin-top: 2rem;text-align: center;}
 [id^="pdt__"] .product__item:nth-child(n+9) {display: none;}
 [id^="pdt__"] .product__item.show {display: block !important;}
 #pdt__sale .product__item {display: block;}
 #pdt__sale .product__item:nth-child(n+13) {display: none;}
+
+
+
+/**************************************/
+/*** Каталог товаров на главной ***/
+/**************************************/
+#pdt__catalog .block__title {margin: 0;}
+#pdt__catalog .owl-nav {width: 4rem;margin: 1.25rem auto 0;position: relative;}
+#pdt__catalog .owl-nav:before {content: '';position: absolute;top: .25rem;left: calc(50% - 1px);width: 2px;height: 1.5rem;background-color: #CBC3DB;border-radius: 4px;}
+#pdt__catalog .owl-prev, #pdt__catalog .owl-next {background-color: transparent;box-shadow: none;width: 2rem;height: 2rem;}
+.loading .categories__item {display: inline-block;}
+.categories__list.loading {height: 234px;}
+.categories__list {display: grid;gap: 20px;grid-template-columns: repeat(6, 1fr);}
+.categories__image {width: 140px;height: 140px;margin: 0 auto;background-color: #ffffff;border-radius: 100%;border: 1rem solid rgba(126, 184, 218, 0.2);}
+.categories__image img {border-radius: 100%}
+.categories__name {margin-top: 10px;font-size: 1rem;text-align: center;display: block;}
+
+/* Лесенка отступов для каталога */
+#pdt__catalog .owl-item.active {transition: all 0.5s ease;}
+#pdt__catalog .owl-item.active + .active {margin-top: 2rem;}
+#pdt__catalog .owl-item.active + .active + .active {margin-top: 4rem;}
+#pdt__catalog .owl-item.active + .active + .active + .active {margin-top: 4rem;}
+#pdt__catalog .owl-item.active + .active + .active + .active + .active {margin-top: 2rem;}
+#pdt__catalog .owl-item.active + .active + .active + .active + .active + .active {margin-top: 0;}
+
+
+/**************************************/
+/*** Распродажа ***/
+/**************************************/
+#pdt__sales.loading {height: 280px;}
+.pdt__sales-inner {background-color: #BE9DDF;border-radius: 20px;padding: 10px;}
+.pdt__sales-promo {width: 380px;padding: 0 2rem;text-align: center;color: #ffffff;}
+.pdt__sales-promo-title {font-size: 2.5rem;font-weight: bold;}
+.pdt__sales-promo-subtitle {font-size: 1rem;}
+#pdt__sales .pdt__sales-grid {width: calc(100% - 380px);padding-left: 10px;}
+#pdt__sales .owl-prev, #pdt__sales .owl-next {position: absolute;top: calc(50% - 30px);}
+#pdt__sales .owl-prev {left: -20px;} 
+#pdt__sales .owl-next {right: -30px;}
+/* Распродажа. Товар */
+#pdt__sales .product__item {border-radius: 0 20px 20px 0;}
+#pdt__sales .product__image {width: 260px;}
+#pdt__sales .product__shop {width: calc(100% - 260px);padding: 1rem;}
+#pdt__sales .product__name {font-size: 1.25rem;max-height: 3.5rem;height: auto;margin: 1rem 0;display: block;overflow: hidden;}
+#pdt__sales .product__price {margin: 1rem 0;}
+#pdt__sales .product__addto i {display: none;}
+#pdt__sales .product__addCart {margin-right: 5px;}
+/* Распродажа. Окончание акции */
+.product__counter {font-size: 1.25rem;font-weight: bold;color: #FFA5D8;line-height: 1;}
+.product__counter .separator {margin: 0 .5rem;}
+.product__counter-icon {font-size: 3rem;line-height: 1;}
+.product__counter-content {width: calc(100% - 3rem);padding-left: 1rem;}
+.counter__animate-line {margin-top: .5rem;width: 100%;height: 1rem;background-color: #E3DDEE;border-radius: 10px;position: relative;transition: all 0.3s ease;}
+.counter__animate-line-progress {width: 0;height: 100%;background: linear-gradient(180deg, #DECFFF 0%, #9579D1 100%);border-radius: 10px;}
+
+
+/**************************************/
+/*** Новости ***/
+/**************************************/
+#news {margin-bottom: 0;}
+#news .owl-nav {width: 5rem;margin: 1.25rem auto 0;position: relative;}
+#news .owl-nav:before {content: '';position: absolute;top: .25rem;left: calc(50% - 1px);width: 2px;height: 1.5rem;background-color: #CBC3DB;border-radius: 4px;}
+#news .owl-prev, #news .owl-next {background-color: transparent;box-shadow: none;width: 2rem;height: 2rem;}
+.news_list.loading {height: 406px;}
+.news__title {margin-top: 1rem;font-size: 1.25rem;font-weight: bold;display: block;text-align: center;height: 3rem;overflow: hidden;}
+.news__desciprion {display: none;}
+.news__image {position: relative;height: 266px;border: 3px solid #E3DDEE;border-radius: 20px;}
+.news__image img {border-radius: 1rem;}
+.news__content {margin-top: 4rem;text-align: center;}
+.news__button {margin-top: 10px;}
+.news__button i {margin-left: .5rem;}
+.news__date {left: calc(50% - 35px);bottom: -35px;font-size: 1rem;color: #ffffff;background: linear-gradient(180deg, #FFB6DF 0%, #FF72C2 100%);outline: 1rem solid rgba(255, 165, 216, 0.2);width: 70px;height: 70px;border-radius: 100%;text-align: center;flex-direction: column;position: absolute;z-index: 2;}
+.news__item:hover .news__date {background: linear-gradient(180deg, #DECFFF 0%, #9579D1 100%);}
+.news__date .month {text-transform: lowercase;}
+
+
+
 
 
 
