--- a/files/main.css
+++ b/files/main.css
@@ -302,11 +302,12 @@ h6 {font-size: 0.875rem;}
 /*** Модальные окна ***/
 /**************************************/
 .fancybox-close-small {line-height: 1;}
-.fancybox-close-small:hover {color: #ffffff;}
-.fancybox-content {max-width: 50rem;padding: 2.75rem 2rem 2rem 2rem;background-color: #efefef;transition: all 0.3s ease;}
-.fancybox-content.modal {max-width: 32rem;transform: translateY(200%);}
+.fancybox-close-small:hover {color: #FFA5D8;background: transparent;}
+.fancybox-content {max-width: 50rem;padding: 2.75rem 2rem 2rem 2rem;background-color: #efefef;border-radius: 1rem;transition: all 0.3s ease;}
+.fancybox-content.modal {max-width: 32rem;transform: translateY(200%);overflow: visible;}
 .fancybox-slide--complete .fancybox-content.modal {transform: translateY(0);}
-.fancybox-content .block__title {margin-bottom: 2rem;}
+.fancybox-content .block__title {margin-bottom: 1.5rem;}
+.fancybox-content .block__title .title {font-size: 30px;}
 .fancybox-content input, .fancybox-content textarea {background-color: transparent;}
 .fancybox-content .form__buttons {text-align: center;}
 #fancybox__notify {max-width: 26rem;}
@@ -592,6 +593,9 @@ h6 {font-size: 0.875rem;}
 .header__block-icon {line-height: 1;display: block;text-align: center;}
 .header__block-content {padding-left: 10px;}
 .header__block-link {font-size: 16px;font-weight: bold;}
+.header__block-fancy {margin-left: .25rem;}
+.header__block-fancy i {color: #CBC3DB;font-size: 14px;}
+.header__block-fancy:hover i {color: #FFA5D8;}
 .header__block.cart.has-items {padding: 0 0 10px 0;}
 .header__block.cart.has-items .header__block-count {color: #ffffff;background-color: #9579D1;width: 64px;height: 20px;text-align: center;margin: 16px 0;}
 .header__block.cart.has-items [class*="count-"] {display: block;font-size: 12px;font-weight: bold;width: 30px;height: 30px;line-height: 30px;text-align: center;background-color: #9579D1;border-radius: 100%;margin: 0 auto;top: -5px;position: relative;}
@@ -621,10 +625,10 @@ h6 {font-size: 0.875rem;}
 .mainnav__more i {margin-left: .5rem;font-size: 1rem;vertical-align: middle;}
 
 /** Меню. Поиск **/
-.search {position: absolute;right: 10px;}
+.search {position: absolute;right: 5px;}
 .search__form {position: relative;}
-.search__input {border: 0;padding: 0 0 0 55px;height: 40px;}
-.search__submit {width: 40px;height: 40px;line-height: 44px;padding: 0;text-align: center;position: absolute;left: 0;}
+.search__input {border: 0;padding: 0 0 0 55px;height: 50px;background-color: #F9F6FF;}
+.search__submit {width: 40px;height: 40px;line-height: 44px;padding: 0;text-align: center;position: absolute;left: 5px;top: 5px;}
 .search__reset {opacity: 0;position: absolute;right: 10px;line-height: 40px;}
 .search__filled .search__reset {opacity: 1;}
 .search__loading .lds-ring {display: block;}
@@ -710,15 +714,16 @@ h6 {font-size: 0.875rem;}
 /**************************************/
 .callback__inner {display: grid;gap: 20px;grid-template-columns: repeat(3, 1fr);align-items: center;}
 .callback__item {justify-content: flex-end;flex-direction: column;align-items: flex-start;height: 406px;background-color: #ffffff;border-radius: 1.5rem;background-repeat: no-repeat;background-size: cover;position: relative;}
-.callback__title {font-size: 30px;font-weight: 600;}
-.callback__subtitle {font-size: 1rem;}
+.callback__title {font-size: 30px;font-weight: 600;position: relative;z-index: 2;}
+.callback__subtitle {font-size: 1rem;position: relative;z-index: 2;}
 .callback__icon {left: 3rem;bottom: 5.5rem;font-size: 1rem;color: #ffffff;background: linear-gradient(180deg, #DECFFF 0%, #9579D1 100%);width: 90px;height: 90px;border-radius: 100%;text-align: center;flex-direction: column;position: absolute;z-index: 2;}
 .callback__price {font-size: 26px;font-family: 'Cormorant Infant', serif;}
-.callback__content {border-top: 20px solid rgba(237, 184, 225, 0.4);padding: 2rem 1.25rem 1.25rem 1.25rem;border-radius: 0 0 1.5rem 1.5rem;background-repeat: no-repeat;background-size: cover;width: 100%;position: relative;}
+.callback__content {padding: 4rem 1.25rem 1.25rem 1.25rem;border-radius: 0 0 1.5rem 1.5rem;background-repeat: no-repeat;background-size: cover;width: 100%;position: relative;}
 .callback__item:last-child {justify-content: flex-start;}
-.callback__item:last-child .callback__content {border-top: 0;border-bottom: 20px solid rgba(237, 184, 225, 0.4);padding: 1.25rem 1.25rem 2rem 1.25rem;border-radius: 1.5rem 1.5rem 0 0;}
+.callback__item:last-child .callback__content {border-top: 0;padding: 1.25rem 1.25rem 4rem 1.25rem;border-radius: 1.5rem 1.5rem 0 0;}
+.callback__item:last-child .callback__content:before {content: '';background-image: url('{ASSETS_IMAGES_PATH}callback_bg.png?design=THEMENAME');width: 100%;height: 100%;display: block;position: absolute;left: 0;top: 0;transform: rotate(180deg);z-index: 1;background-size: cover;}
 .callback__item:last-child .callback__icon {bottom: auto;top: 5.5rem}
-.callback__item-callback {padding: 1.25rem;height: 460px;}
+.callback__item-callback {padding: 1.25rem;height: 460px;background-position: 10% 20%;}
 .callback__item-callback .pretitle {margin: .5rem auto 0;}
 .callback__item-callback .callback__subtitle {font-size: 1rem;margin-top: 1rem;}
 .callback__item-callback .form__button {width: 100%;}
@@ -744,7 +749,7 @@ h6 {font-size: 0.875rem;}
 /**************************************/
 /*** Подвал ***/
 /**************************************/
-.footer__menu {width: 100%;position: relative;margin: 1rem 0;padding: 0 80px;background-color: #ffffff;box-shadow: 0px 4px 10px rgba(174, 143, 237, 0.3);border-radius: 40px;}
+.footer__menu {width: 100%;position: relative;margin: 2rem 0;padding: 0 80px;background-color: #ffffff;box-shadow: 0px 4px 10px rgba(174, 143, 237, 0.3);border-radius: 40px;}
 .footer__bottom {justify-content: space-around;margin: 1rem 0;}
 .footer__copyright {color: #CBC3DB;text-align: center;margin: 1rem 0;}
 /** Подвал. Контакты **/
@@ -892,6 +897,49 @@ h6 {font-size: 0.875rem;}
 .news__date {left: calc(50% - 35px);bottom: -35px;font-size: 1rem;color: #ffffff;background: linear-gradient(180deg, #FFB6DF 0%, #FF72C2 100%);outline: 1rem solid rgba(255, 165, 216, 0.2);width: 70px;height: 70px;border-radius: 100%;text-align: center;flex-direction: column;position: absolute;z-index: 2;}
 .news__item:hover .news__date {background: linear-gradient(180deg, #DECFFF 0%, #9579D1 100%);}
 .news__date .month {text-transform: lowercase;}
+
+
+
+/**************************************/
+/*** Фоновые изображения ***/
+/**************************************/
+.overlay-preheader {background-image: url('{ASSETS_IMAGES_PATH}bg_2.png?design=THEMENAME'), url('{ASSETS_IMAGES_PATH}bg.jpg?design=THEMENAME');}
+.overlay-preheader {top: 0;left: 0;width: 100%;height: 1000px;background-position: center;background-size: cover;z-index: -1;position: absolute;}
+.overlay-header {bottom: -55%;left: 0;width: 100%;height: 100%;border-radius: 100% 100% 0 0;background: #F8F1F5;position: absolute;}
+.overlay-prefooter {background-image: url('{ASSETS_IMAGES_PATH}bg.jpg?design=THEMENAME');}
+.overlay-prefooter {bottom: 0;left: 0;width: 100%;height: 1000px;background-position: center;background-size: cover;z-index: -1;position: absolute;}
+.overlay-footer {top: -40%;left: 0;width: 100%;height: 100%;border-radius: 0 0 100% 100%;background: #F8F1F5;position: absolute;}
+.overlay-center {background-image: url('{ASSETS_IMAGES_PATH}bg_3.png?design=THEMENAME');}
+.overlay-center {bottom: -80%;left: 0;width: 100%;height: 936px;background-position: center;background-size: cover;z-index: -1;position: absolute;}
+
+
+
+/**************************************/
+/*** Модальные окна ***/
+/**************************************/
+.modal__link.phone {font-size: 18px;font-weight: bold;margin: 10px 0;}
+.modal__link {margin: 20px 0;font-size: 1rem;display: block;text-align: center;}
+.modal__buttons {text-align: center;}
+.modal__icons {margin-top: 1rem;justify-content: center;}
+.modal__icons a {margin-bottom: 0;}
+.modal__icon {left: calc(50% - 35px);top: -35px;font-size: 2rem;color: #ffffff;background: linear-gradient(180deg, #FFB6DF 0%, #FF72C2 100%);outline: 1rem solid rgba(255, 165, 216, 0.2);width: 70px;height: 70px;border-radius: 100%;text-align: center;flex-direction: column;position: absolute;z-index: 2;}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
